# drc_plug_task_sim

GetStiffnessDamping/: research.cpp  research_damping.cpp  research_jacobian.cpp  research_stiffness.cpp
GetStiffnessDamping/research/: 4DOFRobot.xml  test.py  test_example.py
Tag0/: model.sdf
Tag1/: model.sdf
Tag2/: model.sdf
Tag3/: model.sdf
Tag4/: model.sdf
cable/: model.sdf
cable/Jaco/: robot_launch_with_cable.launch
cable_apriltag/: model.sdf
cable_fixed/: model.sdf
cable_test/: model.sdf
drc_plug_task_sim_with_jaco/: attacher_with_cable_and_wall_and_kinect.world  autonomous_adjustment_test.cpp  robot_launch_with_cable_kinect.launch
drc_plug_task_sim_with_jaco/research/: CMakeLists.txt  package.xml  readme  slack.txt
drc_plug_task_sim_with_jaco/research/data/: different wires
drc_plug_task_sim_with_jaco/research/launch/: SurpriseTask_withArm_Kinect.launch  SurpriseTask_withArm_RealSense.launch  SurpriseTask_withArm_TwoCameras.launch  SurpriseTask_withoutArm_Kinect.launch  SurpriseTask_withoutArm_RealSense.launch  jaco_kinect.launch  jaco_moveIt.launch  jaco_moveIt_kinect_darknet.launch  sawyer_moveIt.launch
drc_plug_task_sim_with_jaco/research/scripts/sawyer/: pcSegmentation.py  test.py  test_0727_orientation_incorrect.py  test_PickandPlace_NoVision_Gazebo.py  test_PickandPlace_fish_with_Obstacles.py  test_class.py
drc_plug_task_sim_with_jaco/research/src/: IAEAtask1.cpp  SocketPoseEstimation.cpp  SurpriseTask.cpp  SurpriseTask_final.cpp  SurpriseTask_new.cpp  autonomous_adjustment.cpp  autonomous_adjustment_test (copy).cpp  autonomous_pickup.cpp  autonomous_pickup_point_cloud_ziptie_line_fitting_pose_estimation_considering_trajectory_optimization.cpp  autonomous_pickup_with_ziptie_surface_detection.cpp  autonomous_pull_out.cpp  circle_detection (copy).cpp  circle_detection.cpp  color_detection.cpp  example_pcl.cpp  hand_gesture_recognition_kinect.cpp  hand_gesture_recognition_stable.cpp  hand_gesture_recognition_test.cpp  kinova_cart_vel_backup.cpp  line_segmentation.cpp  line_segmentation_filtered_withBB.cpp  modeling_sim.cpp  plane_segmentation_pcl.cpp  point_cloud_wire.cpp  point_cloud_ziptie.cpp  steps  task_sim.cpp  test_cv_bridge.cpp  validation_sim.cpp
wall/: model.sdf
